Fix mobile area search button alignment

--- a/src/scss/_mobile-probe-buttons.scss
+++ b/src/scss/_mobile-probe-buttons.scss
@@ -1,12 +1,13 @@
 .outer-container--mobile {
   .probe-buttons-container {
     top: $header-height-mobile + $timeline-height + 10;
-    left: 0px;
+    right: 0px;
     width: 100%;
     justify-content: space-between;
   }
 
   .area-button {
+    margin-left: auto;
     margin-right: 10px;
   }
 
